@@ -2,12 +2,13 @@ apply plugin: 'com.android.library'
 apply from: '../config/quality/quality.gradle'
 
 android {
-    compileSdkVersion 22
-    buildToolsVersion "22.0.0"
+    compileSdkVersion 23
+    buildToolsVersion "23.0.0"
 
+    useLibrary 'org.apache.http.legacy'
     defaultConfig {
         minSdkVersion 9
-        targetSdkVersion 22
+        targetSdkVersion 23
         versionCode 1
         versionName "1.0"
     }
@@ -26,8 +27,8 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile project(':bankdroid-interface')
-    compile 'com.android.support:appcompat-v7:22.0.+'
-    compile 'org.apache.commons:commons-io:1.3.2'
+    compile 'com.android.support:appcompat-v7:23.1.1'
+    compile ('org.apache.commons:commons-io:1.3.2') {exclude module: 'commons-io'}
     compile 'org.jsoup:jsoup:1.7.3'
     compile 'com.fasterxml.jackson.core:jackson-core:2.1.0'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.1.0'
