@@ -1,4 +1,4 @@
-#Sun May 24 19:44:46 CEST 2015
+#Mon Dec 21 08:16:02 CET 2015
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
